--- a/src/components/Solution/ParameterSection/styles/parameterSection.module.css
+++ b/src/components/Solution/ParameterSection/styles/parameterSection.module.css
@@ -182,11 +182,39 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (width: 1280px) {
+  .container_line {
+    gap: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 1200px) {
   .container {
-    padding: 100px 24px 56px;
+    padding: 70px 24px;
   }
 
+  .container_line {
+    gap: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+@media (width: 915px) {
+  .container_line {
+    gap: 20px;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 900px) {
+  .container_line {
+    gap: 20px;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 768px) {
   .box {
     padding: 24px;
     height: 350px;
@@ -217,6 +245,11 @@
 
   .box_sub {
     font-size: 20px;
+  }
+
+  .container_line {
+    gap: 12px;
+    margin-bottom: 12px;
   }
 
   .header_responsive {
