--- a/src/components/AboutUs/IntroSection/introSection.module.css
+++ b/src/components/AboutUs/IntroSection/introSection.module.css
@@ -178,3 +178,59 @@
     }
   }
 }
+
+@media (max-height: 428px) {
+  .container {
+    height: 100vh;
+    margin-top: 0;
+    justify-content: space-between;
+  }
+
+  .header {
+    padding: 10px 20px;
+    align-items: center;
+    flex: 1;
+
+    h1 {
+      font-size: 28px;
+      line-height: 30px;
+    }
+
+    h3 {
+      font-size: 18px;
+      line-height: 20px;
+    }
+  }
+
+  .img {
+    height: 200px;
+    overflow: hidden;
+  }
+
+  .content {
+    padding: 10px 20px;
+    margin-top: 0;
+    flex: 1;
+
+    h2 {
+      font-size: 18px;
+
+      line-height: 18.8px;
+
+      span {
+        font-size: 24px;
+        line-height: 26px;
+      }
+    }
+
+    p {
+      font-size: 16px;
+    }
+  }
+}
+
+@media (max-height: 360px) {
+  .img {
+    height: 150px;
+  }
+}
