--- a/src/components/Home/FeatureSection/styles/featureSection.module.css
+++ b/src/components/Home/FeatureSection/styles/featureSection.module.css
@@ -99,6 +99,10 @@
 /* Responsive */
 
 @media (max-width: 1200px) {
+  .container {
+    padding: 70px 24px;
+  }
+
   .content {
     width: 100%;
   }
