--- a/src/components/Home/DifferenceSection/styles/differenceSection.module.css
+++ b/src/components/Home/DifferenceSection/styles/differenceSection.module.css
@@ -95,6 +95,7 @@
 
 @media (max-width: 1200px) {
   .container {
+    padding: 70px 24px;
     flex-direction: column;
     gap: 40px;
     align-items: center;
@@ -120,7 +121,6 @@
     gap: 40px;
     align-items: center;
     justify-content: space-between;
-    padding: 70px 24px 56px;
   }
 
   .img {
